<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="@string/Settings" />

    <SwitchPreference
        android:key="keepTheScreenOn"
        android:title="@string/Display"
        android:summary="@string/KeepTheDisplayOn"/>

    <SwitchPreference
        android:key="useCustomWord"
        android:title="@string/UseCustomWord"
        android:summary="@string/UseCustomWordMode"/>

    <EditTextPreference
        android:key="customWord"
        android:dependency="useCustomWord"
        android:title="@string/CustomWord"
        android:summary="@string/NoWordChosen"
        android:dialogTitle="@string/ChooseAWord"
        android:dialogIcon="@mipmap/ic_launcher"/>

    <Preference
        android:key="statistics"
        android:title="@string/Statistics"
        android:summary="@string/NumOfWords"/>

    <PreferenceCategory
        android:title="@string/About" />

    <Preference
        android:key="developmentDetails"
        android:title="@string/Development"
        android:summary="@string/DevelopedBy">
        <intent
            android:action="android.intent.action.VIEW"
            android:data="http://aspectsense.com" />
    </Preference>

    <Preference
        android:key="rateTheApp"
        android:title="@string/LikedTheApp"
        android:summary="@string/RateTheApp"/>

    <Preference
        android:key="shareTheApp"
        android:title="@string/Share"
        android:summary="@string/TellYourFriends"/>

    <PreferenceCategory
        android:title="@string/Attributions" />

    <Preference
        android:title="Transparent Snorkel Mask Clipart"
        android:summary="Gallery Yopriceille">
        <intent
            android:action="android.intent.action.VIEW"
            android:data="https://gallery.yopriceville.com/Free-Clipart-Pictures/Summer-Vacation-PNG/Transparent_Snorkel_Mask_Clipart#.WsS8QIhuaUk" />
    </Preference>

    <Preference
        android:title="Miscellaneous audio effects"
        android:summary="J-Sinn on the Sounds Resource">
        <intent
            android:action="android.intent.action.VIEW"
            android:data="https://www.sounds-resource.com/nes/bubblebobble/sound/3719/" />
    </Preference>

    <Preference
        android:title="Bubbles sound"
        android:summary="Mike Koenig on the Soundbible">
        <intent
            android:action="android.intent.action.VIEW"
            android:data="http://soundbible.com/1137-Bubbles.html" />
    </Preference>

</PreferenceScreen>
